<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context="creative.can.com.suratpengantar.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


    <TextView
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tulisan_llogin"
        android:textColor="@color/putih"
        android:textStyle="bold"
        android:textSize="30sp"
        android:id="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="sideli"
        android:textAllCaps="true"
        android:textSize="25sp"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textColor="@color/putih"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:id="@+id/ly_login"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="center_vertical"
        android:background="@color/putih"
        android:orientation="vertical"
        android:padding="16dp">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_account_box_black_24dp"
            android:hint="@string/nik"
            android:maxLength="16"
            app:met_floatingLabelText="@string/nik"
            app:met_floatingLabel="highlight"
            android:drawablePadding="10dp"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_lock_black_24dp"
            android:inputType="textPassword"
            app:met_floatingLabelText="@string/password"
            android:hint="@string/password"
            app:met_floatingLabel="highlight"
            android:drawablePadding="10dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:background="@color/colorPrimary"
        android:textColor="@color/putih"
        android:layout_below="@id/ly_login"/>

    <TextView
        android:id="@+id/txt_daftar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_login"
        android:text="Daftar Baru"
        android:textColor="@color/putih"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:visibility="gone"/>
        </LinearLayout>
</ScrollView>
